fix navbar on mobile screen

--- a/global.scss
+++ b/global.scss
@@ -48,7 +48,7 @@
 }
 
 body {
-    background-color: #ffffff;
+    background-color: #E5E5E5;
     font-family: 'Montserrat, sans-serif';
     font-size: 16px;
     overflow: hidden;
