--- a/src/components/NavbarMenu/NavbarMenu.module.scss
+++ b/src/components/NavbarMenu/NavbarMenu.module.scss
@@ -23,6 +23,7 @@
     align-items: flex-start;
     padding: 1.5em 0 3em 0;
     width: 300px;
+    background-color: #fff;
     overflow-y: scroll;
     scroll-behavior: smooth;
     box-shadow: 0px 5px rgba(2, 0, 96, 0.25);
@@ -71,6 +72,10 @@
             text-decoration: none;
             color: black;
             display: block;
+        }
+
+        @media (max-width: 768px) {
+            padding: 0;
         }
 
 
@@ -158,13 +163,11 @@
 
     @media (max-width: 768px) {
         position: relative;
-        overflow-x: hidden;
-        overflow-y: scroll;
         bottom: 0;
         height: 100%;
         left: 0;
         width: 4em;
-        padding: 0 1em;
+        padding: 0 1em 3em 1em;
 
         .title-menu {
             visibility: hidden;
