--- a/src/layout.module.scss
+++ b/src/layout.module.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     height: 100%;
+    background-color: #ffffff;
 }
 
 .right-main-section {
@@ -9,8 +10,7 @@
     flex-direction: column;
     overflow-y: scroll;
     scroll-behavior: smooth;
-    margin-bottom: 6em;
-    padding: 2em 2em 2em 2em;
+    padding: 2em 2em 7em 2em;
     flex: 1;
     &::-webkit-scrollbar{
         width: 6px;
@@ -24,6 +24,6 @@
         background-color: #4F27BF;
     }
     @media screen and (max-width: 768px) {
-        padding: 1em 1em 0 1em;
+        padding: 1em 1em 7em 1em;
     }
 }
